--- a/course-content-math-est-1.html
+++ b/course-content-math-est-1.html
@@ -817,6 +817,7 @@
     <!-- Firebase Configuration and Course Access -->
     <script src="js/firebase-config.js"></script>
     <script src="js/firebase-course-access.js"></script>
+    <script src="js/firebase-user-management.js"></script>
     <script src="lib/easing/easing.min.js"></script>
     <script src="lib/waypoints/waypoints.min.js"></script>
     <script src="lib/counterup/counterup.min.js"></script>
