--- a/course-content-english-est-1.html
+++ b/course-content-english-est-1.html
@@ -572,6 +572,9 @@
     <script src="lib/counterup/counterup.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
+    <!-- Simple Protection -->
+    <script src="js/simple-protection.js"></script>
+    
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
 
