--- a/detail2.html
+++ b/detail2.html
@@ -251,7 +251,7 @@
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
     <!-- Anti-Debug Protection (Load First) -->
-    <script src="js/anti-debug.js"></script>
+    <script src="js/simple-protection.js"></script>
     
     <!-- Dynamic Code Loading -->
     <script src="js/codes.js"></script>
