--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
             -moz-context-menu: none !important;
             context-menu: none !important;
             touch-action: manipulation !important;
-            pointer-events: none !important;
         }
         
         /* Re-enable pointer events for interactive elements */
@@ -381,6 +380,9 @@
     <script src="lib/counterup/counterup.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
+    <!-- Simple Protection -->
+    <script src="js/simple-protection.js"></script>
+    
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
 
