--- a/detail.html
+++ b/detail.html
@@ -157,7 +157,7 @@
                         </div>
                         <h5 class="text-white py-3 px-4 m-0">Course Price: $199</h5>
                         <div class="py-3 px-4">
-                            <a id="enroll-btn" class="btn btn-block btn-secondary py-3 px-5" href="" target="_blank" rel="noopener">Details</a>
+                            <a id="enroll-btn" class="btn btn-block btn-secondary py-3 px-5" href="https://docs.google.com/forms/d/e/1FAIpQLSeO6FMQyeVrbVhYPBFhWqPBFjoQSpNeBC6p05BM1_A8sCCKrQ/viewform?usp=dialog" target="_blank" rel="noopener">Details</a>
                             <button id="activation-btn" class="btn btn-block btn-warning py-3 px-5 mt-2" data-toggle="modal" data-target="#activationModal">Activation Code</button>
                             <button id="view-course-btn" class="btn btn-block btn-success py-3 px-5 mt-2" style="display:none;">View Course</button>
                         </div>
