--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="col-lg-6">
                 <div class="section-title text-center position-relative mb-4">
                     <h6 class="d-inline-block position-relative text-secondary text-uppercase pb-2">Our Courses</h6>
-                    <h1 class="display-4">Created by ENG. Sheffoo Hany</h1>
+                    <h1 class="display-4">Created by ENG. Mohamed Hany</h1>
                 </div>
             </div>
         </div>
