--- a/course-content-english-est-1.html
+++ b/course-content-english-est-1.html
@@ -182,14 +182,15 @@
                     
                     <div class="card mb-4">
                         <div class="card-header bg-success text-white">
-                            <h5 class="mb-0"><i class="fa fa-download mr-2"></i>Resources</h5>
+                            <h5 class="mb-0"><i class="fa fa-tasks mr-2"></i>Assignments</h5>
                         </div>
                         <div class="card-body">
                             <ul class="list-unstyled mb-0">
-                                <li><a href="#" class="text-primary"><i class="fa fa-file-pdf mr-2"></i>Grammar Guide</a></li>
-                                <li><a href="#" class="text-primary"><i class="fa fa-file-pdf mr-2"></i>Reading Passages</a></li>
-                                <li><a href="#" class="text-primary"><i class="fa fa-file-pdf mr-2"></i>Writing Templates</a></li>
-                                <li><a href="#" class="text-primary"><i class="fa fa-file-pdf mr-2"></i>Vocabulary Lists</a></li>
+                                <li><a href="#" class="text-primary"><i class="fa fa-file-alt mr-2"></i>Assignment 1</a></li>
+                                <li><a href="#" class="text-primary"><i class="fa fa-file-alt mr-2"></i>Assignment 2</a></li>
+                                <li><a href="#" class="text-primary"><i class="fa fa-file-alt mr-2"></i>Assignment 3</a></li>
+                                <li><a href="#" class="text-primary"><i class="fa fa-file-alt mr-2"></i>Assignment 4</a></li>
+                                <li><a href="#" class="text-primary"><i class="fa fa-file-alt mr-2"></i>Assignment 5</a></li>
                             </ul>
                         </div>
                     </div>
