--- a/course-content-chemistry-est-2.html
+++ b/course-content-chemistry-est-2.html
@@ -120,10 +120,10 @@
                         </div>
                         <div class="card-body">
                             <ul class="list-unstyled mb-0">
-                                <li><a href="#" class="text-primary"><i class="fa fa-file-pdf mr-2"></i>Lab Manual</a></li>
-                                <li><a href="#" class="text-primary"><i class="fa fa-file-pdf mr-2"></i>Periodic Table</a></li>
-                                <li><a href="#" class="text-primary"><i class="fa fa-file-pdf mr-2"></i>Formula Sheet</a></li>
-                                <li><a href="#" class="text-primary"><i class="fa fa-file-pdf mr-2"></i>Practice Problems</a></li>
+                                <li><a href="https://drive.google.com/file/d/0JKL012LMN234OPQ567RST890UVW123XYZ456A789012BCD345FGH678IJK901/view?usp=sharing" target="_blank" class="text-primary"><i class="fa fa-file-pdf mr-2"></i>Lab Manual</a></li>
+                                <li><a href="https://drive.google.com/file/d/1KLM123MNO345PQR678STU901VWX234YZ567890ABC123DEF456GHI789JKL012/view?usp=sharing" target="_blank" class="text-primary"><i class="fa fa-file-pdf mr-2"></i>Periodic Table</a></li>
+                                <li><a href="https://drive.google.com/file/d/2LMN234NOP456QRS789TUV012WXY345Z678901BCD234EFG567HIJ890KLM123/view?usp=sharing" target="_blank" class="text-primary"><i class="fa fa-file-pdf mr-2"></i>Formula Sheet</a></li>
+                                <li><a href="https://drive.google.com/file/d/3MNO345OPQ567RST890UVW123XYZ456A789012BCD345FGH678IJK901LMN234/view?usp=sharing" target="_blank" class="text-primary"><i class="fa fa-file-pdf mr-2"></i>Practice Problems</a></li>
                             </ul>
                         </div>
                     </div>
