--- a/course-content-math-est-2.html
+++ b/course-content-math-est-2.html
@@ -186,10 +186,10 @@
                         </div>
                         <div class="card-body">
                             <ul class="list-unstyled mb-0">
-                                <li><a href="#" class="text-primary"><i class="fa fa-file-pdf mr-2"></i>Advanced Formula Sheet</a></li>
-                                <li><a href="#" class="text-primary"><i class="fa fa-file-pdf mr-2"></i>Calculus Problems</a></li>
-                                <li><a href="#" class="text-primary"><i class="fa fa-file-pdf mr-2"></i>Practice Tests</a></li>
-                                <li><a href="#" class="text-primary"><i class="fa fa-file-pdf mr-2"></i>Solution Manuals</a></li>
+                                <li><a href="https://drive.google.com/file/d/4XYZ456YZA567890ABC123DEF456GHI789JKL012MNO345PQR678STU901VWX234YZ567890/view?usp=sharing" target="_blank" class="text-primary"><i class="fa fa-file-pdf mr-2"></i>Advanced Formula Sheet</a></li>
+                                <li><a href="https://drive.google.com/file/d/5YZA567ZAB678901BCD234EFG567HIJ890KLM123NOP456QRS789TUV012WXY345Z678901/view?usp=sharing" target="_blank" class="text-primary"><i class="fa fa-file-pdf mr-2"></i>Calculus Problems</a></li>
+                                <li><a href="https://drive.google.com/file/d/6ZAB678ABC789012CDE345FGH678IJK901LMN234OPQ567RST890UVW123XYZ456A789012/view?usp=sharing" target="_blank" class="text-primary"><i class="fa fa-file-pdf mr-2"></i>Practice Tests</a></li>
+                                <li><a href="https://drive.google.com/file/d/7ABC789BCD890123DEF456GHI789JKL012MNO345PQR678STU901VWX234YZ567890ABC123/view?usp=sharing" target="_blank" class="text-primary"><i class="fa fa-file-pdf mr-2"></i>Solution Manuals</a></li>
                             </ul>
                         </div>
                     </div>
