--- a/course.html
+++ b/course.html
@@ -292,15 +292,15 @@
                     <a class="courses-list-item position-relative d-block overflow-hidden mb-2" href="detail.html?course=math-est-1">
                         <img class="img-fluid" src="img/courses-1.jpg" alt="">
                         <div class="courses-text">
-                            <h4 class="text-center text-white px-3">Math Course EST 1</h4>
+                            <h4 class="text-center text-white px-3">DR Naglaa Ezzat</h4>
                             <div class="border-top w-100 mt-3">
                                 <div class="d-flex justify-content-between p-4">
-                                    <span class="text-white"><i class="fa fa-user mr-2"></i>Jhon Doe</span>
+                                    <span class="text-white"><i class="fa fa-user mr-2"></i>Math Teacher</span>
                                     
                                 </div>
                             </div>
                             <div class="enroll-section">
-                                <button class="btn btn-danger enroll-btn">Details</button>
+                                <button class="btn btn-danger enroll-btn">Enroll Now</button>
                             </div>
                         </div>
                     </a>
