--- a/course-content-math-est-1.html
+++ b/course-content-math-est-1.html
@@ -488,17 +488,17 @@
                                         <div class="video-icon">
                                             <i class="fa fa-play-circle"></i>
                                         </div>
-                                        <h6>Linear Equations</h6>
-                                        <small>15 min</small>
+                                        <h6>Solving Equations</h6>
+                                        <small>60 min</small>
                                     </div>
                                 </div>
                                 <div class="col-md-3 col-sm-6 mb-3">
-                                    <div class="video-square" onclick="playVideo('quadratic-equations', 'Quadratic Equations', 'Master quadratic equations and their solutions.')">
+                                    <div class="video-square" onclick="playVideo('Exponents and Radical', 'Exponents and Radical', 'Master Exponential Equations and their solutions.')">
                                         <div class="video-icon">
                                             <i class="fa fa-play-circle"></i>
                                         </div>
-                                        <h6>Quadratic Equations</h6>
-                                        <small>20 min</small>
+                                        <h6>Exponents and Radical</h6>
+                                        <small>90 min</small>
                                     </div>
                                 </div>
                                 <div class="col-md-3 col-sm-6 mb-3">
@@ -1159,8 +1159,8 @@
             if (Object.keys(videoUrls).length === 0) {
                 videoUrls = {
                 // Module 1: Algebra Fundamentals
-                'linear-equations': 'https://drive.google.com/file/d/16i8Y3YUsfoO7x1e-AL-V2Wpsk7Fb-lpU/preview',
-                'quadratic-equations': 'https://drive.google.com/file/d/YOUR_VIDEO_ID_2/preview',
+                'linear-equations': 'https://drive.google.com/file/d/1d7CV5_X7f0wnK7px4zuXLGl2w2g4lMFs/preview',
+                'Exponents and Radical': 'https://drive.google.com/file/d/19ob-9-Qi_Hev1ivAQHu-43uon-ZalttF/preview',
                 'polynomial-functions': 'https://drive.google.com/file/d/YOUR_VIDEO_ID_3/preview',
                 'systems-equations': 'https://drive.google.com/file/d/YOUR_VIDEO_ID_4/preview',
                 'rational-expressions': 'https://drive.google.com/file/d/YOUR_VIDEO_ID_5/preview',
